# bk_avdk_smp

ap/components/bk_asr_service/: Kconfig
ap/components/bk_aud_param_ctrl/: audio_dbgtool_intf.c  audio_param_ctrl.c
ap/components/bk_cli/: cli_config.h  cli_netif.c  cli_wifi.c  shell_task.c
ap/components/bk_display/: Kconfig
ap/components/bk_gsensor/: gsensor_sc7a20.c
ap/components/bk_netif/: bk_netif.c
ap/components/bk_network_transfer/: Kconfig  network_transfer.c  network_transfer.h  network_transfer_internal.c  network_transfer_internal.h
ap/components/bk_pm/: low_vol.c  pm.c
ap/components/bk_thirdparty/agora-iot-sdk/: CMakeLists.txt
ap/components/bk_thirdparty/agora-iot-sdk/include/bk7258/: agora_rtc_api.h
ap/components/bk_usb/: CMakeLists.txt
ap/components/bk_vfs/: bk_posix.h  fatfs_adapter.c
ap/components/bk_video_player/: CMakeLists.txt  Kconfig
ap/components/bk_wifi/: Kconfig
ap/components/bk_wifi_driver/: wdrv_cntrl.c  wdrv_cntrl.h
ap/components/lvgl/: Kconfig
ap/components/lwip_intf_v2_1/: Kconfig
ap/components/webclient/: webclient.c
ap/include/: CMakeLists.txt
ap/include/components/: bk_voice_write_service.h  bk_voice_write_service_types.h
ap/include/driver/: h264_types.h  jpeg_enc.h  pwr_clk.h
ap/include/modules/: avilib.h  image_scale.h  pm.h  wifi.h  wifi_types.h
cp/components/bk_bluetooth/: Kconfig
cp/components/bk_cli/: CMakeLists.txt  cli_main.c  cli_netif.c  cli_wifi.c
projects/BT_7258.si4project/: BT_7258.SearchResults  BT_7258.sip_xad  BT_7258.sip_xm  BT_7258.sip_xsd  BT_7258.siproj  BT_7258.siwork
(+5821 files in other folders)
